# voicebook

./: .gitignore  Dockerfile  README.md  TTS_MODEL_COMPARISON.md  cosyvoice_tts.py  docker-compose.yml  emotion_voice_demo.py  full_book_demo.py  generate_emotion_demo.py  llm_benchmark.py  llm_benchmark_results.json  main.py  pyproject.toml  test_cosyvoice_docker.py  test_demo.py  test_final.py  test_modelscope.py  test_ms.py  test_qwen3.py  tts_compare.py  tts_comparison_demo.py  tts_demo.py  tts_demo_simple.py  tts_performance_test.py
.github/workflows/: publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STACK.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  STACK.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
.trae/rules/: project-guidelines.md
design/: 20260716-design-resources-layout.active.html  20260716-qwen-audio-boundary-declick.active.html  20260716-qwen-audio-boundary-declick.superseded.html  20260716-qwen-segment-pacing.active.html  20260716-qwen-segment-pacing.superseded.html  20260716-qwen-title-pause-and-casting-demos.active.html  20260716-qwen3ttsai-integration.active.html  20260716-voicebook-tool.active.html  20260716-voicebook-tool.wip.html  README.md
research/attribution_proto_20260610/: README.md
research/chrome-free-tts-api-20260717/: findings.md
research/cosy_instruct_only_eval_20260615/: REPORT.md  generate_samples.py  manifest.json  playlist.html
research/fanren_cosy_dialogue_estimate_20260615/: REPORT.md  estimate.json  estimate.py
research/fanren_edge_runtime_estimate_20260616/: REPORT.md  estimate.json  estimate.py
research/fanren_single_chapter_tts_estimate_20260616/: REPORT.md  estimate.json  estimate.py
research/indextts_bilibili_eval_20260615/: REPORT.md  generate_index_samples.py  manifest.json
research/kokoro_v11_official_eval_20260615/: REPORT.md  generate_official_samples.py  manifest.json  playlist.html
research/kokoro_v11_voice_eval_20260615/: REPORT.md  generate_samples.py  manifest.json  playlist.html
research/qwen3-tts-0.6b-local-20260717/: findings.md
research/qwen3ttsai_api_20260716/: REPORT.md
research/qwen3ttsai_eval_20260716/: REPORT.md  build_html_report.py  qwen3ttsai-report.html  run_eval.py
research/qwen_mp4_click_diagnosis_20260716/: analyze_clicks.py  metrics.json
research/tech_reselect_20260610/: REPORT.md
research/tts_emotion_eval_20260615/: REPORT.md  generate_samples.py  manifest.json  playlist.html
scripts/: generate_voice_previews.py
tests/: run_all_tests.py  test_audio_boundaries.py  test_books.py  test_classical_attribution.py  test_cli.py  test_previews.py  test_qwen_tts.py  test_tool_pipeline.py  test_voice_casting.py  test_voicebook_script.py
voicebank/: bank.json
(+78 files in other folders)
