[project]
name = "voicebook-tool"
version = "0.5.0"
description = "将 EPUB/TXT 转换为多角色分章节 MP3 的命令行工具"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
authors = [
    { name = "Rex", email = "talebook@foxmail.com" },
]
keywords = ["audiobook", "epub", "text-to-speech", "tts", "voicebook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
]
dependencies = [
    "edge-tts>=6.1",
    "jieba>=0.42.1",
    "PyYAML>=6.0.2",
    "requests>=2.34.2",
]

[project.urls]
Homepage = "https://github.com/talebook/voicebook"
Repository = "https://github.com/talebook/voicebook"
Issues = "https://github.com/talebook/voicebook/issues"

[project.scripts]
voicebook-tool = "book2audio.cli:main"

[project.optional-dependencies]
csi = [
    "huggingface-hub>=1.8.0",
    "torch>=2.12.0",
    "transformers>=5.10.2",
]
kokoro = ["kokoro-onnx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/book2audio"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/book2audio",
    "/README.md",
    "/pyproject.toml",
]
